# sopel-wikimedia

./: Makefile  NEWS  README.rst  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi.yml
sopel_wikimedia/: __init__.py
sopel_wikimedia/wikipedia/: config.py  parser.py  plugin.py  wiki.py
sopel_wikimedia/wiktionary/: impl.py  plugin.py
