[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "sopel-wikimedia"
version = "1.0.0"
description = "Wikimedia plugin for Sopel"
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]
maintainers = [
  { name="dgw", email="dgw@technobabbl.es" },
  { name="SnoopJ", email="snoopjedi@gmail.com" },
]
authors = [
  { name="Dimitri Molenaars" },
  { name="Elad Alfassa", email="elad@fedoraproject.org" },
  { name="dgw", email="dgw@technobabbl.es" },
  { name="SnoopJ", email="snoopjedi@gmail.com" },
]

dynamic = ["readme"]
license = "EFL-2.0"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
requires-python = ">=3.8, <4"
dependencies = [
    "sopel>=7.1",
]

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-wikimedia"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-wikimedia/issues"

[project.entry-points."sopel.plugins"]
wikipedia = "sopel_wikimedia.wikipedia.plugin"
wiktionary = "sopel_wikimedia.wiktionary.plugin"


[tool.flake8]
max-line-length = 120

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_wikimedia", "sopel_wikimedia.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.rst", "NEWS"], content-type="text/x-rst" }
